acmeair_cephfs/deploy-acmeair-bookingservice-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-bookingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-booking-deployment
  template:
    metadata:
      labels:
        name: acmeair-booking-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-bookingservice-java
        image: sys-loz-test-team-docker-local.artifactory.swg-devops.com/acmeair/acmeair-bookingservice-java:latest
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 20
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 120
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-booking-service
spec:
  ports:
    - port: 9080
  selector:
    name: acmeair-booking-deployment
---
##### Booking Database  #####
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: acmeair-booking-db
  name: acmeair-booking-db
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: acmeair-booking-db
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: acmeair-booking-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-booking-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: acmeair-booking-db
    spec:
      volumes:
        - name: acmeair-booking-db-2
          persistentVolumeClaim:
            claimName: bookingpvc
      containers:
      - image: sys-loz-test-team-docker-local.artifactory.swg-devops.com/mongo:4.2
        name: acmeair-booking-db
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: acmeair-booking-db-2
            mountPath: /data/db
      restartPolicy: Always
status: {}
