acmeair_cephfs/acmeair-authservice-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-auth-route-dr
spec:
  host: acmeair.apps.api.acm213-manage.cp.fyre.ibm.com
  path: /auth
  to:
    kind: Service
    name: acmeair-auth-service
