acmeair_cephfs/acmeair-bookingservice-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-booking-route-dr
spec:
  host: acmeair.apps.api.acm213-manage.cp.fyre.ibm.com
  path: /booking
  to:
    kind: Service
    name: acmeair-booking-service
