acmeair_cephfs/acmeair-customerservice-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-customer-route-dr
spec:
  host: acmeair.apps.api.acm213-manage.cp.fyre.ibm.com
  path: /customer
  to:
    kind: Service
    name: acmeair-customer-service
