acmeair_cephfs/acmeair-flightservice-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-flight-route-dr
spec:
  host: acmeair.apps.api.acm213-manage.cp.fyre.ibm.com
  path: /flight
  to:
    kind: Service
    name: acmeair-flight-service
