acmeair_cephfs/acmeair-mainservice-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-main-route-dr
spec:
  host: acmeair.apps.api.a3e20008-f1.cp.fyre.ibm.com
  path: /acmeair
  to:
    kind: Service
    name: acmeair-main-service
